--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-﻿name: CI
+name: CI
 on:
   push:
   pull_request:
@@ -8,14 +8,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '21'
           cache: maven
+
       - name: Build (skip tests)
         run: mvn -B -DskipTests package
+        working-directory: ElPaisSeleniumProject/ElPaisSeleniumProject
+
       - name: Optional smoke run
         run: java -jar target/*-SNAPSHOT.jar
+        working-directory: ElPaisSeleniumProject/ElPaisSeleniumProject
         continue-on-error: true
